--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,4 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<h1>MiniApp!</h1>
+<p>First application of
+<a href="http://www.github.com/shockstate"> shockstate.</a>. Visit me to get rid of new projects!
+</p>
