Finish static pages

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,4 @@
-<h1>About</h1>
-<p>I suck, you suck, this page is still sucking, but learning hard tho :p</p>
+<% provide(:title, "About")%>
+
+    <h1>About</h1>
+    <p>I suck, you suck, this page is still sucking, but learning hard tho :p</p>
