--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,5 @@
-<h1>Help</h1>
-<p>Get help by searching on <a href=http://www.google.com> google!</a> ^.^</p>
+<% provide(:title, "Help")%>
+
+    <h1>Help</h1>
+    <p>Get help by searching on <a href=http://www.google.com> google!</a> ^.^</p>
+  </body>
