--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,7 @@
-<h1>MiniApp!</h1>
-<p>First application of
-<a href="http://www.github.com/shockstate"> shockstate.</a>. Visit me to get rid of new projects!
-</p>
+<%provide(:title, "Home")%>
+<!DOCTYPE html>
+
+      <h1>MiniApp!</h1>
+      <p>First application of
+      <a href="http://www.github.com/shockstate"> shockstate.</a>. Visit me to get rid of new projects!
+      </p>
